# self_stl

./: .gitignore  README.md
algo/: test.cpp  union_find.hpp  union_find_v2.hpp
algo/byte/: trans_order.hpp
algo/search/: lower_bound.hpp  upper_bound.hpp
co/: simple.cpp
craft/any/: a.out  any.hpp  any_test.cpp  main.cpp
craft/batch/: zero.cpp
craft/bloom/: bloom_filter.cpp  bloom_filter_2.cpp  bloom_filter_3.cpp
craft/c_cpp/: size_char.c  variable_len_arr.c
craft/cmake/cpp_coverage_demo/: CMakeLists.txt
craft/cmake/cpp_coverage_demo/test/: test_add.cpp
craft/compare/: a.out  self_max.cpp  test.cpp
craft/dead_lock/: example.cpp
craft/decouple/LoggingExample_Cpp14_Compatible/: CMakeLists.txt
craft/decouple/LoggingExample_Cpp14_Compatible/logging/: default_adapter.h  mock_adapter.h
craft/decouple/LoggingExample_Cpp17_Compatible/: CMakeLists.txt
craft/decouple/LoggingExample_Cpp17_Compatible/logging/: default_adapter.h  logging_adapter.h
craft/decouple/LoggingExample_Cpp17_Compatible/platform/: platform.h
craft/decouple/LoggingExample_Cpp17_Compatible/tests/: test_user_module.cpp
craft/decouple/LoggingExample_Cpp17_Compatible/user/: user_module.cpp  user_module.h
craft/decouple/macro/: CMakeLists.txt
craft/decouple/macro/logging/: default_adapter.h  logging_adapter.h  mock_adapter.h
craft/decouple/macro/platform/: platform.h
craft/decouple/macro/test/: test_user_module.cpp
craft/decouple/macro/user/: user_module.cpp  user_module.h
craft/decouple/question_version/logger_v2/: CMakeLists.txt  main.cpp
craft/decouple/question_version/logger_v2/include/: ArgList.hpp  ILogger.hpp  LoggerDispatcher.hpp  LoggingMacro.hpp
craft/decouple/question_version/logger_v2/src/: ProductLoggerImpl.cpp
craft/dispatch/: a.out  command.h  command_dispatch.hpp  command_handler.h  command_handler_impl.hpp  command_log.hpp  example_1.cpp  example_2.cpp
craft/exception/: 1.cpp  2.cpp
craft/filter/: a.out  example.cpp
craft/functor/: adder.cpp
craft/lambda/: co_xxx.cpp  dispatch.cpp  strategy.cpp  vs_function.cpp  with_forward.cpp
craft/lc/: test3.cpp  tixing.cpp
craft/log/: xxx.cpp
craft/log/LoggerProjectV2/: CMakeLists.txt
craft/log/LoggerProjectV2/src/: BusinessLogger.h  ILogger.h  PlatformLogger.h  main.cpp
craft/log/LoggerProjectV2/tests/: test_logger.cpp
craft/mem/: ptr_after_delete.cpp  trace.cpp
craft/mem_pool/: a.out  main.cpp  mem_pool_base.hpp  object_manager.hpp  pooled_object.hpp  user.hpp
craft/message_proc/: CMakeLists.txt  example.cpp
craft/move/: small_equivalent_str.cpp
craft/performance/: hot_func  hot_func.cpp  mat_calc.cpp  matrix.cpp  mem_alloc.cpp  sort.cpp  thread_rob.cpp
craft/proto/ex_2/: CMakeLists.txt  main.cc  status.pb.h  status.proto  status_name_stub.cc  test.cpp
craft/question_dtor/: AServiceStub.hpp  ClientAService.cpp  service.grpc.pb.cc  service.grpc.pb.h  service.pb.cc  service.pb.h  service.proto
craft/reflect/: 1.cpp  2.cpp
craft/shared_ptr/: cyclic_reference.cpp
craft/smart_ptr/: README.md  advanced_craft.cpp  thread_safe.md
craft/states/: main.cpp  my_state_machine.cpp  my_state_machine.h  state_model_base.h
craft/template/: a.out  decay.cpp
craft/timer/: 111.c  222.c  async_timer_task  example.c  procedure.md
craft/tset/: 12  2.cpp  3.cpp  a.out  ranges_test.cpp
craft/type_trait/: hash_test.cpp
data_struct/: rb_tree.hpp  segment_tree.hpp  trie_v1.hpp
data_struct/buffer/: async_logger_system.cpp  ring_buffer.cpp
data_struct/rb_tree/: practice_1.cpp  rbtree_self.hpp  rbtree_self_test.cpp  rbtree_self_test_v1.cpp  rbtree_self_v1.hpp  rbtree_self_vv.hpp  rbtree_self_xx.hpp  refer.cpp  stl_tree.h  test_rbtree_vv.cpp
data_struct/tree/: calc_binary_tree_num.cpp  loser_tree.cpp  test  win_tree.cpp
design/message_proc/: base_type.h  field_processor.h  message_dispatcher.h  message_handler.h  order_table.yaml  parse_st.h  register.h  tbl_parse.h  version_parser.h
design/mode/states/ex_combine_v3/: CMakeLists.txt  main.cpp  state_machine.h
design/mode/states/ex_ver2/: CMakeLists.txt
design/mode/states/ex_ver2/include/: mask_state_machine.h  state_machine_derived.h  subsystem_states.h
design/mode/states/ex_ver2/src/: main.cpp
design/mode/states/ex_ver2/tests/: test_state_machine.cpp
design/solid/: DIP.cpp  ISP.cpp  LSP.cpp  OCP.cpp  SRP.cpp
docs/data_struct/: rb_tree.md
macro/: print.hpp
manager/: object_manager.hpp
meta/: a.out  factorial.cpp  fib.cpp  type_list.cpp
other/: bit_op.cpp  quick_select.hpp
pool/: database_connection.hpp  fixed_mem_pool_nvwa.hpp  game.hpp  mem_pool.hpp  mem_pool_alloc.hpp  mem_pool_base.hpp  mem_pool_base_nvwa.hpp  mem_pool_user.hpp  object_alloc_pool.hpp  object_pool.hpp  partical_pool.hpp  particle.hpp  pooled_object.hpp  static_mem_pool_nvwa.hpp  user.hpp
pool/object_pool/: base_object_mgr.hpp  main.cpp  myclass.hpp  myclass_mgr.hpp  object_pool.hpp  singleton.hpp  type_a.h  type_b.h  (+2 more)
process/ex_start/: CMakeLists.txt
process/ex_start/config/: processes.json
process/ex_start/include/: process_manager.h  registry_manager.h
process/ex_start/src/: main.cpp  process_manager.cpp  registry_manager.cpp
queue/: priority_queue.hpp
test/: CMakeLists.txt
test/20/: test_st_print.cpp
test/algo/byte/: test.cpp  test1.cpp  test3.cpp  trans_order_test.cpp
test/bench_test/: pass_by_refer_rvo.cpp
test/boost/: test_pfr.cpp  test_simu_pfr.cpp
test/data_struct/: test_rbtree.cpp
test/db/: test_db.cpp
test/design/: test_command_mode.cpp  test_observer_mode.cpp  test_states_mode.cpp
test/mem/: test_allocator.cpp
test/pool/: test_fixed_pool.cpp  test_mem_pool.cpp  test_mem_pool_base.cpp  test_object_alloc_pool.cpp  test_object_pool.cpp  test_particle_pool.cpp  test_temp.cpp
test/queue/: test_priority_queue.cpp
test/thread/: test_scheduler.cpp  test_thread.cpp
test/utils/: test_st_print.cpp
thread/: scheduler.hpp  thread_approach.cpp  thread_pool.hpp  thread_pool_with_pri.hpp  thread_state.cpp
utility/: class_level_lock.h  cont_ptr_utils.h  cpp_features.h  fast_mutex.h  nocopyble.h  nvwa.h  static_assert.h
(+273 files in other folders)
